--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,32 @@
 .row {
-  padding: 20px;  
+  padding: 100px 20px 20px 20px;  
+  text-align: center;
+}
+
+body{
+	background-image: url(../images/clouds.jpg);
+	background-size: cover;
+
+}
+
+h1{
+	padding-top: 50px;
+	text-align: center;
+}
+
+#convertFtoC, #convertCtoF{
+	margin: 20px;
+	border-radius: 5px;
+	background-color: white;
+	font-weight: bold;
+
+}
+
+#inputFtoC, #inputCtoF{
+	margin-right: 10px;
+	font-weight: bold;
+}
+
+#solutionFtoC, #solutionCtoF{
+	font-weight: bold;
 }
